--- a/Gauss's_Law_Intuitition.ipynb
+++ b/Gauss's_Law_Intuitition.ipynb
@@ -22,8 +22,8 @@
     "Now if we think of divergence as the flux from some region in space per the volume of that space, and extended this thought process to infinitesimal volumes of space, one would expect the divergence in a specific direction, $x$ to be proportional to $\\frac{\\partial E}{\\partial x}$. Summing these partial derivatives for three independent vectors in 3D space gives \n",
     "\\begin{equation}\n",
     "\\begin{split}\n",
-    "\\nabla \\cdot E = \\frac{\\partial E}{\\partial x} + \\frac{\\partial E}{\\partial y} + \\frac{\\partial E}{\\partial z}\\\\\n",
-    "\\frac{\\rho}{\\epsilon_0} = \\frac{\\partial E}{\\partial x} + \\frac{\\partial E}{\\partial y} + \\frac{\\partial E}{\\partial z}\\\\\n",
+    "\\nabla \\cdot E = \\frac{\\partial E_x}{\\partial x} + \\frac{\\partial E_y}{\\partial y} + \\frac{\\partial E_z}{\\partial z}\\\\\n",
+    "\\frac{\\rho}{\\epsilon_0} = \\frac{\\partial E_x}{\\partial x} + \\frac{\\partial E_y}{\\partial y} + \\frac{\\partial E_z}{\\partial z}\\\\\n",
     "\\end{split}\n",
     "\\end{equation}\n",
     "\n",
