doing purcell problems with astropy

--- a/Gauss's_Law_Intuitition.ipynb
+++ b/Gauss's_Law_Intuitition.ipynb
@@ -31,6 +31,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now let us consider the divergence in cylindrical coordinates. We have for the definition of polar coordinates in terms of cartesian coordinates\n",
+    "\\begin{equation}\n",
+    "\\begin{split}\n",
+    "r = \\sqrt{x^2+y^2}\\\\\n",
+    "\\theta = \\arctan(\\frac{y}{x})\\\\\n",
+    "z = z\\\\\n",
+    "\\end{split}\n",
+    "\\end{equation}\n",
+    "Since $z$ is the same in both cartesian and cylindrical coordinates, the problem reduces the finding the divergence in polar coordinates. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
