did the first half of problem 2

--- a/Purcell/Purcell_Chapter_1.ipynb
+++ b/Purcell/Purcell_Chapter_1.ipynb
@@ -1,30 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "Purcell Chapter 1-.ipynb",
-      "provenance": [],
-      "collapsed_sections": [
-        "mavPdC5KMjpp"
-      ],
-      "authorship_tag": "ABX9TyMRaPExHuvHZpcRb13JjCac",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/MarcosP7635/Physics_Practice/blob/main/Purcell/Purcell_Chapter_1_.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -32,11 +12,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "!pip install SymPy\n",
-        "import sympy\n",
-        "from sympy.abc import *"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -44,27 +20,26 @@
         "id": "ee-Y9RKUM1zw",
         "outputId": "a9aa4824-e5bb-4fdd-ad91-a912950668aa"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
             "Requirement already satisfied: SymPy in /usr/local/lib/python3.7/dist-packages (1.7.1)\n",
             "Requirement already satisfied: mpmath>=0.19 in /usr/local/lib/python3.7/dist-packages (from SymPy) (1.2.1)\n"
           ]
         }
+      ],
+      "source": [
+        "!pip install SymPy\n",
+        "import sympy\n",
+        "from sympy.abc import *"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "%%javascript\n",
-        "MathJax.Hub.Config({\n",
-        "    TeX: { equationNumbers: { autoNumber: \"AMS\" } }\n",
-        "});"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -73,35 +48,39 @@
         "id": "cIq6u8KlGsGx",
         "outputId": "b46b914a-7bcd-43be-f8d8-ef5c36c78deb"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "display_data",
           "data": {
+            "application/javascript": "MathJax.Hub.Config({\n    TeX: { equationNumbers: { autoNumber: \"AMS\" } }\n});",
             "text/plain": [
               "<IPython.core.display.Javascript object>"
-            ],
-            "application/javascript": [
-              "MathJax.Hub.Config({\n",
-              "    TeX: { equationNumbers: { autoNumber: \"AMS\" } }\n",
-              "});"
             ]
           },
-          "metadata": {}
+          "metadata": {},
+          "output_type": "display_data"
         }
+      ],
+      "source": [
+        "%%javascript\n",
+        "MathJax.Hub.Config({\n",
+        "    TeX: { equationNumbers: { autoNumber: \"AMS\" } }\n",
+        "});"
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "#Chapter 1\n"
-      ],
       "metadata": {
         "id": "zcV8zk8VNe1f"
-      }
+      },
+      "source": [
+        "#Chapter 1\n"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "L5EqCoKGk7A6"
+      },
       "source": [
         "##1.1\n",
         "\\begin{equation}\n",
@@ -109,10 +88,7 @@
         "\\frac{F_g}{F_c} = \\frac{Gm_p^2}{kq_p^2}\n",
         "\\end{split}\n",
         "\\end{equation}"
-      ],
-      "metadata": {
-        "id": "L5EqCoKGk7A6"
-      }
+      ]
     },
     {
       "cell_type": "code",
@@ -126,8 +102,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "part a: ratio of gravitational force\n",
             "to coulombic is  8.08454806060859e-37\n",
@@ -153,15 +129,18 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "##1.2"
-      ],
       "metadata": {
         "id": "mavPdC5KMjpp"
-      }
+      },
+      "source": [
+        "##1.2"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "jmn_-zyKmv6g"
+      },
       "source": [
         "\n",
         "Fixing the negative ion at the origin and the fourth ion at $(x,y,z)$, we have\n",
@@ -204,13 +183,13 @@
         "z = \\pm\\sqrt{\\frac{-.5x_1^2+ .5y_1^2}{y_1}-\\frac{x_1^2q_3}{q_3+q_1+q_2}}\n",
         "\\end{split}\n",
         "\\end{equation}"
-      ],
-      "metadata": {
-        "id": "jmn_-zyKmv6g"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "dGT67GvNL0yf"
+      },
       "source": [
         "Since $x_1$ and $y_1$ are both legs of a right triangle with the angle opposite to $y_1$ being 60 degrees,\n",
         "\\begin{equation}\n",
@@ -222,31 +201,31 @@
         "\\end{split}\n",
         "\\end{equation}\n",
         "where $y_1$ is the height of the equilateral triangle."
-      ],
-      "metadata": {
-        "id": "dGT67GvNL0yf"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "##1.3\n"
-      ],
       "metadata": {
         "id": "_9llUzopM6oC"
-      }
+      },
+      "source": [
+        "##1.3\n"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "###1.3b"
-      ],
       "metadata": {
         "id": "ForljG0z2kvB"
-      }
+      },
+      "source": [
+        "###1.3b"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "Fc46rmspUHLB"
+      },
       "source": [
         "\n",
         "\\begin{equation}\n",
@@ -261,13 +240,13 @@
         "R^{-2} = \\frac{cos^2\\theta}{u^2}\n",
         "\\end{split}\n",
         "\\end{equation}"
-      ],
-      "metadata": {
-        "id": "Fc46rmspUHLB"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "0N7TY_ZmW3VB"
+      },
       "source": [
         "\\begin{equation}\n",
         "\\begin{split}\n",
@@ -282,13 +261,13 @@
         "\\frac{\\partial u}{\\partial u} = 0(a\\sin v) - au\\cos v = -ua\\cos v\n",
         "\\end{split}\n",
         "\\end{equation}"
-      ],
-      "metadata": {
-        "id": "0N7TY_ZmW3VB"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "mE0DDjh4tf82"
+      },
       "source": [
         "It is sufficient to integrate the square of the distance to the point charge over the surface of the cone. \n",
         "\n",
@@ -305,13 +284,13 @@
         "E = \\frac{\\sigma}{4\\pi\\epsilon_0}\\int\\frac{1}{R^2}dA \\\\\n",
         "\\end{split}\n",
         "\\end{equation}"
-      ],
-      "metadata": {
-        "id": "mE0DDjh4tf82"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "kGrjjEUdcHFG"
+      },
       "source": [
         "By definition, we have for the integral of a scalar function over a surface\n",
         "\\begin{equation}\n",
@@ -337,22 +316,22 @@
         "E = \\frac{\\cos\\theta\\sin\\theta\\sqrt2\\sigma}{4\\pi\\epsilon_0}\\int\\int \\frac{1}{u}dudv\\\\\n",
         "\\end{split}\n",
         "\\end{equation}"
-      ],
-      "metadata": {
-        "id": "kGrjjEUdcHFG"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "###1.3a"
-      ],
       "metadata": {
         "id": "vV473EYJ32_l"
-      }
+      },
+      "source": [
+        "###1.3a"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "-DCrwLVf36aH"
+      },
       "source": [
         "Similarly we have for a cone that isn't cut off, and evaluating with [wolfram alpha](https://www.wolframalpha.com/input?i=%5Cint_%7B0%7D%5E%7B%5Cpi%7D%5Csqrt%7B1%2B%5Csin%5E2x+%2B+%5Csin%5E2%28x%29cos%5E2%28x%29%7Ddx)\n",
         "\\begin{equation}\n",
@@ -361,65 +340,63 @@
         "\\end{split}\n",
         "\\end{equation}\n",
         "Which does not integrate, and thus the force is infinite."
-      ],
-      "metadata": {
-        "id": "-DCrwLVf36aH"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        ""
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "-edyjhgw3m-s"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "dp2A0ENe1QKV"
+      },
       "source": [
         "##1.5\n",
         "Stable by symmetry and the interior being equipotential."
-      ],
-      "metadata": {
-        "id": "dp2A0ENe1QKV"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "##1.6"
-      ],
       "metadata": {
         "id": "y3eVYQOi1eRx"
-      }
+      },
+      "source": [
+        "##1.6"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "c743bV9B1hlu"
+      },
       "source": [
         "###1.6a\n",
         "\n",
         "\\begin{equation}\n",
         "Q = -\\frac{q}{4}\n",
         "\\end{equation}"
-      ],
-      "metadata": {
-        "id": "c743bV9B1hlu"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "###1.6b"
-      ],
       "metadata": {
         "id": "7jMsJgBW2Bg4"
-      }
+      },
+      "source": [
+        "###1.6b"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "Tjvh2sIJ4A6Q"
+      },
       "source": [
         "The force from two of the 3 identical charges on the third identical charge in the bottom left is $F$\n",
         "\\begin{equation}\n",
@@ -437,47 +414,71 @@
         "-q\\sqrt{3} = \\frac{3Q}{32}\\\\\n",
         "Q = -\\frac{32q}{\\sqrt{3}}\n",
         "\\end{equation}"
-      ],
-      "metadata": {
-        "id": "Tjvh2sIJ4A6Q"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "UrS3tT_j9sNp"
+      },
       "source": [
         "###1.6c,d\n",
         "Since the net force on each charge is 0, and is this also the case when they are infinitely far apart, the system has the same potential energy as it would if the charges were separated at infinity. Thus the potential energy of the system is 0."
-      ],
-      "metadata": {
-        "id": "UrS3tT_j9sNp"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "##1.7"
-      ],
       "metadata": {
         "id": "8dkAiHrD-JDf"
-      }
+      },
+      "source": [
+        "##1.7"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "#Chapter 2"
-      ],
       "metadata": {
         "id": "-9Wj63HehJQM"
-      }
+      },
+      "source": [
+        "#Chapter 2"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "##2.1"
-      ],
       "metadata": {
         "id": "aSjhe-qMhM3W"
+      },
+      "source": [
+        "##2.1"
+      ]
+    }
+  ],
+  "metadata": {
+    "colab": {
+      "authorship_tag": "ABX9TyMRaPExHuvHZpcRb13JjCac",
+      "collapsed_sections": [
+        "mavPdC5KMjpp"
+      ],
+      "include_colab_link": true,
+      "name": "Purcell Chapter 1-.ipynb",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3.9.10 64-bit",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python",
+      "version": "3.9.10"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "274785dbb282d05f4e0ae2ca70ac66f1fa0484127cd60ef9f4ac2dd997977034"
       }
     }
-  ]
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
