--- a/Purcell/Chapter_5_Exercises.ipynb
+++ b/Purcell/Chapter_5_Exercises.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
        "<Quantity 1.65790481e+10>"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
        "<Quantity 15000. V / m>"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +138,7 @@
        "<Quantity 0.16 m>"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +179,7 @@
        "<Quantity 0.016 m2>"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +218,7 @@
        "<Quantity 1.32632385e+10>"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +253,7 @@
        "<Quantity 15000. V / m>"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +291,7 @@
        "<Quantity 0.016 m>"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +330,7 @@
        "<Quantity 1.32632385e+10>"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +364,7 @@
        "<Quantity 18750. V / m>"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -378,38 +378,179 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#Problem 2\n",
-    "\n",
-    "For "
+    "#Problem 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$800 \\; \\mathrm{}$"
+      ],
+      "text/plain": [
+       "<Quantity 800.>"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "r = .0001 / 2 * units.meter\n",
     "l = .04 * units.meter\n",
-    "n = 5 * 10**8"
+    "n = 5 * 10**8\n",
+    "l / r"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Since the area of the bases of the filament are negligible, we will only consider points on the surface that are normal to the length of the filament. \n",
+    "Since the radius of the filament is $\\frac{1}{800}$ of the length, we can approximate the filament as a line of charge. Thus, we have an electric field of \n",
+    "\\begin{equation}\n",
+    "E = \\frac{\\lambda}{2\\pi\\epsilon_0 r} \n",
+    "\\end{equation}\n",
+    "where $r$ is the distance between the line that crosses the center of the filament and its top and bottom and a given point. We take $\\lambda = \\pi(r_c)^2 \\rho$ where $\\rho$ is the charge density and $r_c$ is the radius of the filament. Where $Q$ is the total charge of the filament,\n",
     "\\begin{equation}\n",
     "\\begin{split}\n",
-    "\\text{From Gauss's Law} \\quad \\frac{E}{A} = \\frac{\\rho}{\\epsilon_0}\\\\\n",
-    "\\text{Using the aforementioned area and volume of the filament} \\quad \\frac{E}{2rl\\pi} = \\frac{\\rho}{\\epsilon_0}\\\\\n",
+    "A = \\pi r_c^2\\\\\n",
+    "\\rho = \\frac{Q}{A l}\\\\\n",
+    "\\lambda = A \\rho = \\frac{Q}{l}\n",
     "\\end{split}\n",
     "\\end{equation}\n",
-    "By symmetry we only need to consider the charge that lies in the plane that intersects the center of the sphere and a given point on its surface,\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "λ = \n"
+     ]
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$2.0027208 \\times 10^{-9} \\; \\mathrm{\\frac{C}{m}}$"
+      ],
+      "text/plain": [
+       "<Quantity 2.00272079e-09 C / m>"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "r_c = r\n",
+    "Q = n * constants.e.si \n",
+    "lambda_ = Q / l\n",
+    "print(\"λ = \")\n",
+    "lambda_"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Thus we have $E = \\frac{k}{r}$ where $k$ will be defined below and $r$ is the distance between the $z$ axis and a given point, taking the filament to be symmetric about the $z$ axis."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "k = \n"
+     ]
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$35.999114 \\; \\mathrm{\\frac{C}{F}}$"
+      ],
+      "text/plain": [
+       "<Quantity 35.9991137 C / F>"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "k = lambda_ / (2 * np.pi * constants.eps0)\n",
+    "print(\"k = \")\n",
+    "k"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For an exact solution, the electric field from a point in the filament is \n",
+    "\\begin{equation}\n",
+    "\\begin{split}\n",
+    "dE = \\frac{\\rho}{4\\pi\\epsilon_0 R^2}dV\\\\\n",
+    "\\end{split}\n",
+    "\\end{equation}\n",
+    "where $R$ is the distance between that point in the interior of the filament and the a given point on the surface of the filament. In cylindrical coordinates the filament is bounded by $r\\le .00005$ and $0\\le z \\le .04$. Thus we have for the total electric field at that point on the surface of the filament, specifically $(.00005,\\theta_0,z_0)$\n",
+    "\\begin{equation}\n",
+    "\\begin{split}\n",
+    "E = 2\\frac{\\rho}{4\\pi\\epsilon_0}\\int_0^{.04}\\int_0^{.00005}\\int_0^\\pi R^{-2}rd\\theta drdz\\\\\n",
+    "R^{-2} = ((x-x_0)^2+(y-y_0)^2+(z-z_0)^2)^{-1}\\\\\n",
+    "R^{-2} = ((r\\sin\\theta-.00005\\sin\\theta_0)^2+(r\\cos\\theta-.00005\\cos\\theta_0)^2+(z-z_0)^2)^{-1}\\\\\n",
+    "R^{-2} = (r^2-.0001r(\\sin\\theta_0\\sin\\theta+\\cos\\theta_0\\cos\\theta)+.0000000025-+(z-z_0)^2)^{-1}\\\\\n",
+    "E = \\frac{\\rho}{2\\pi\\epsilon_0}\\int_0^{.04}\\int_0^{.00005}\\int_0^\\pi \\\\(r^2-.0001r(\\sin\\theta_0\\sin\\theta+\\cos\\theta_0\\cos\\theta)+.0000000025-+(z-z_0)^2)^{-1}rd\\theta drdz\\\\\n",
+    "\\end{split}\n",
+    "\\end{equation}\n",
+    "By symmetry, the electric field strength cannot depend on $\\theta_0$, so we can choose $\\theta_0=0$\n",
+    "\\begin{equation}\n",
+    "\\begin{split}\n",
+    "E = \\frac{\\rho}{2\\pi\\epsilon_0}\\int_0^{.04}\\int_0^{.00005}\\int_0^\\pi\\frac{r}{r^2-.0001r\\cos\\theta+.0000000025+(z-z_0)^2}d\\theta drdz\\\\\n",
+    "\\end{split}\n",
+    "\\end{equation}\n",
     "\n",
     "\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "z"
    ]
   },
   {
