--- a/Purcell/Chapter_5_Exercises.ipynb
+++ b/Purcell/Chapter_5_Exercises.ipynb
@@ -2,15 +2,36 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import astropy\n",
     "from astropy import constants\n",
     "from astropy import units\n",
     "import numpy as np\n",
     "import sympy\n",
     "from sympy.abc import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-6"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "int(np.round(-5.8999999))"
    ]
   },
   {
@@ -35,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +75,7 @@
        "<Quantity 1.65790481e+10>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +122,7 @@
        "<Quantity 15000. V / m>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +159,7 @@
        "<Quantity 0.16 m>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +200,7 @@
        "<Quantity 0.016 m2>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +239,7 @@
        "<Quantity 1.32632385e+10>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +274,7 @@
        "<Quantity 15000. V / m>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +312,7 @@
        "<Quantity 0.016 m>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +351,7 @@
        "<Quantity 1.32632385e+10>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +385,7 @@
        "<Quantity 18750. V / m>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -383,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +416,7 @@
        "<Quantity 800.>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -420,91 +441,52 @@
     "\\begin{split}\n",
     "A = \\pi r_c^2\\\\\n",
     "\\rho = \\frac{Q}{A l}\\\\\n",
-    "\\lambda = A \\rho = \\frac{Q}{l}\n",
+    "\\lambda = A \\rho = \\frac{Q}{l}\\\\\n",
     "\\end{split}\n",
     "\\end{equation}\n",
-    "\n",
+    "Computing this with Python, we have\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "λ = \n"
+      "The electric field at the surface of the filament is \n"
      ]
     },
     {
      "data": {
       "text/latex": [
-       "$2.0027208 \\times 10^{-9} \\; \\mathrm{\\frac{C}{m}}$"
+       "$719982.27 \\; \\mathrm{\\frac{V}{m}}$"
       ],
       "text/plain": [
-       "<Quantity 2.00272079e-09 C / m>"
+       "<Quantity 719982.27392128 V / m>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "r_c = r\n",
     "Q = n * constants.e.si \n",
     "lambda_ = Q / l\n",
-    "print(\"λ = \")\n",
-    "lambda_"
+    "E = (lambda_ / (2 * np.pi * constants.eps0 * r)).to(\"V/m\")\n",
+    "print(\"The electric field at the surface of the filament is \")\n",
+    "E"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Thus we have $E = \\frac{k}{r}$ where $k$ will be defined below and $r$ is the distance between the $z$ axis and a given point, taking the filament to be symmetric about the $z$ axis."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "k = \n"
-     ]
-    },
-    {
-     "data": {
-      "text/latex": [
-       "$35.999114 \\; \\mathrm{\\frac{C}{F}}$"
-      ],
-      "text/plain": [
-       "<Quantity 35.9991137 C / F>"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "k = lambda_ / (2 * np.pi * constants.eps0)\n",
-    "print(\"k = \")\n",
-    "k"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "For an exact solution, the electric field from a point in the filament is \n",
+    "For an exact solution that instead treats the filament like a cylinder instead of a line, the electric field from a point in the filament is \n",
     "\\begin{equation}\n",
     "\\begin{split}\n",
     "dE = \\frac{\\rho}{4\\pi\\epsilon_0 R^2}dV\\\\\n",
@@ -535,22 +517,59 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "z"
+    "Now we will calculate the electric for a frame in which the filament is moving at .9c parallel to its height. We have\n",
+    "\\begin{equation}\n",
+    "\\begin{split}\n",
+    "l_{moving} = l\\gamma\\\\\n",
+    "\\lambda_{moving} = \\frac{Q}{l_{moving}} = \\lambda\\frac{l}{l_{moving}} \\\\\n",
+    "E_{moving} = \\frac{\\lambda_{moving}}{2\\pi \\epsilon_0 r}\\\\\n",
+    "E_{moving} = E\\frac{l}{l_{moving}} = \\frac{E}{\\gamma}\n",
+    "\\end{split}\n",
+    "\\end{equation}\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The electric field in this new reference frame is\n"
+     ]
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$1651752.6 \\; \\mathrm{\\frac{V}{m}}$"
+      ],
+      "text/plain": [
+       "<Quantity 1651752.61745447 V / m>"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "v = .9 * constants.c \n",
+    "E_moving = E / gamma(v)\n",
+    "print(\"The electric field in this new reference frame is\")\n",
+    "E_moving"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#Problem 3"
    ]
   },
   {
