--- a/Gauss's_Law_Intuitition.ipynb
+++ b/Gauss's_Law_Intuitition.ipynb
@@ -34,15 +34,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now let us consider the divergence in cylindrical coordinates. We have for the definition of polar coordinates in terms of cartesian coordinates\n",
+    "For the integral form, one can conceptualize the divergence of the electric field as \n",
     "\\begin{equation}\n",
     "\\begin{split}\n",
-    "r = \\sqrt{x^2+y^2}\\\\\n",
-    "\\theta = \\arctan(\\frac{y}{x})\\\\\n",
-    "z = z\\\\\n",
+    "\\frac{d(E\\cdot A)}{dV} \\to \\nabla \\cdot E\\\\\n",
     "\\end{split}\n",
     "\\end{equation}\n",
-    "Since $z$ is the same in both cartesian and cylindrical coordinates, the problem reduces the finding the divergence in polar coordinates. "
+    "Thus we have\n",
+    "\\begin{equation}\n",
+    "\\begin{split}\n",
+    "\\frac{d(E\\cdot A)}{dV} = \\frac{\\rho}{\\epsilon_0}\\\\\n",
+    "\\int d(E\\cdot A) = \\frac{1}{\\epsilon_0}\\int \\rho dV\\\\\n",
+    "\\end{split}\n",
+    "\\end{equation}\n",
+    "Where the left side is the surface integral of the electric field and the right side is the volume integral of the charge density. \n",
+    "\n"
    ]
   },
   {
