--- a/Thorne_Gravitation/Chapter_1.ipynb
+++ b/Thorne_Gravitation/Chapter_1.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The principle radius of curvature for a geodesic parallel to the bases of the cylinder is $r_h=\\lim_{x\\to\\infty}x$ and the radius of curvature for geodesics perpendicular to the bases of the cylinder is $r$, simply the radius of the cylinder. So we have for the Gaussian curvature $$R=\\frac {1}{r_hr}=\\frac{1}{r\\lim_{x\\to\\infty}x}=0$$"
+    "The principle radius of curvature for a geodesic parallel to the bases of the cylinder is  $r$, simply the radius of the cylinder. The radius of curvature for geodesics perpendicular to the bases of the cylinder is $r_h=\\lim_{x\\to\\infty}x$. So we have for the Gaussian curvature $$R=\\frac {1}{r_hr}=\\frac{1}{r\\lim_{x\\to\\infty}x}=0$$"
    ]
   },
   {
