--- a/Thorne_Gravitation/Chapter_1.ipynb
+++ b/Thorne_Gravitation/Chapter_1.ipynb
@@ -1,6 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "using "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 1"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -17,14 +33,21 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# 2\n",
+    "\n",
+    "Recall that $a_\\text{Newtonian tide} = Gm/r^3$. Now in cgs units, we have"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "m_moon, r_moon = 7.35 * 10**25, 3.84 * 10**10\n",
+    "m_sun, r_moon = 1.989 * 10**33, 1.496 * 10**13 "
+   ]
   }
  ],
  "metadata": {
