--- a/Gravity Newtonian, Post Newtonian, and Relativity/gravity_exercises_ch1.ipynb
+++ b/Gravity Newtonian, Post Newtonian, and Relativity/gravity_exercises_ch1.ipynb
@@ -6,8 +6,9 @@
    "source": [
     "I'm having trouble understanding why Equation 1.13 on page 8\n",
     "\\begin{align}\n",
-    "\\nabla^2 \\frac{1}{\\textbf{x}-\\textbf{x'}}= 4\\pi\\delta(\\textbf{x}-\\textbf{x'}) \n",
-    "\\end{align}"
+    "\\nabla^2 \\frac{1}{|\\textbf{x}-\\textbf{x'}|}= 4\\pi\\delta(\\textbf{x}-\\textbf{x'}) \n",
+    "\\end{align}\n",
+    "is true."
    ]
   },
   {
