--- a/David Tong GR/notes_exercises.ipynb
+++ b/David Tong GR/notes_exercises.ipynb
@@ -43,6 +43,25 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Chain Rule Works :)\n",
+    "\n",
+    "Consider some other chart $\\tilde{\\phi}$ with coordinates $\\tilde{x}^\\nu$. Since $X_p$ is a vector we have\n",
+    "\\begin{align}\n",
+    "& X_p = X^\\mu \\frac{\\partial}{\\partial x^\\mu}|_p = \\tilde{X}^\\mu \\frac{\\partial}{\\partial \\tilde{x}^\\mu}|_p \\\\\n",
+    "&\\text{Now take the tangent vector of some function $f$ and define}\\nonumber\\\\\n",
+    "&\\text{Now with chain rule :) }\\quad X_p(f) = X^\\mu\\frac{\\partial}{\\partial x^\\mu}|_p =  X^\\mu\\frac{\\partial\\tilde{x}^\\nu}{\\partial \\tilde{x}^\\nu}|_{\\phi(p)}\\frac{\\partial f}{\\partial \\tilde{x}^\\nu}|_p \\\\\n",
+    "&\\text{We define}\\quad\\tilde{\\partial}_\\nu\\equiv\\frac{\\partial}{\\partial\\tilde{x}^\\nu}\\quad\\therefore\\quad X_p(f) = X^\\mu\\partial_\\mu f|_p =  X^\\mu\\partial_\\mu \\tilde{x}^\\nu|_{\\phi(p)}\\tilde{\\partial}_\\nu f |_p\\\\\n",
+    "\\end{align}\n",
+    "Then we have\n",
+    "\\begin{align}\n",
+    "X_p = X^\\mu\n",
+    "\\end{align}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   },
   {
