--- a/David Tong GR/notes_exercises.ipynb
+++ b/David Tong GR/notes_exercises.ipynb
@@ -52,11 +52,10 @@
     "&\\text{Now take the tangent vector of some function $f$ and define}\\nonumber\\\\\n",
     "&\\text{Now with chain rule :) }\\quad X_p(f) = X^\\mu\\frac{\\partial}{\\partial x^\\mu}|_p =  X^\\mu\\frac{\\partial\\tilde{x}^\\nu}{\\partial \\tilde{x}^\\nu}|_{\\phi(p)}\\frac{\\partial f}{\\partial \\tilde{x}^\\nu}|_p \\\\\n",
     "&\\text{We define}\\quad\\tilde{\\partial}_\\nu\\equiv\\frac{\\partial}{\\partial\\tilde{x}^\\nu}\\quad\\therefore\\quad X_p(f) = X^\\mu\\partial_\\mu f|_p =  X^\\mu\\partial_\\mu \\tilde{x}^\\nu|_{\\phi(p)}\\tilde{\\partial}_\\nu f |_p\\\\\n",
+    "&\\text{Notice this involved either changing basis}\\quad \\partial_\\mu|_p = \\partial_\\mu\\tilde{x}^\\nu|_{\\phi(p)}\\tilde{\\partial}^\\nu|_p\\\\\n",
+    "&\\text{Or just transforming a contravariant vector}\\quad  \\tilde{X}^\\nu = X^\\mu\\frac{\\partial\\tilde{x}^\\nu}{\\partial x^\\mu}|_{\\phi(p)} = X^\\mu\\partial_\\mu\\tilde{x}^\\nu|_{\\phi(p)}\n",
     "\\end{align}\n",
-    "Then we have\n",
-    "\\begin{align}\n",
-    "X_p = X^\\mu\n",
-    "\\end{align}"
+    "The first and last lines are related :)"
    ]
   },
   {
