--- a/David Tong GR/ch2_notes_exercises.ipynb
+++ b/David Tong GR/ch2_notes_exercises.ipynb
@@ -55,13 +55,72 @@
     "&\\text{Notice this involved either changing basis}\\quad \\partial_\\mu|_p = \\partial_\\mu\\tilde{x}^\\nu|_{\\phi(p)}\\tilde{\\partial}^\\nu|_p\\\\\n",
     "&\\text{Or just transforming a contravariant vector}\\quad  \\tilde{X}^\\nu = X^\\mu\\frac{\\partial\\tilde{x}^\\nu}{\\partial x^\\mu}|_{\\phi(p)} = X^\\mu\\partial_\\mu\\tilde{x}^\\nu|_{\\phi(p)}\n",
     "\\end{align}\n",
-    "The first and last lines are related :)"
+    "The first and last lines are related :)\n",
+    "\n",
+    "Also note that the tangent space only cares about the manifold, not any higher dimensional space the manifold might be embedded in!"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Fields can vary over space\n",
+    "\n",
+    "We define a vector field to be any mathematical object that smoothly assigns a tangent vector to every point in space.\n",
+    "\\begin{align}\n",
+    "&\\text{We define a vector field }X:C^\\infty(M)\\to C^\\infty(M)\\\\\n",
+    "&\\text{Furthermore, for some function }f\\quad X(f(p)) = X_p(f)\\\\\n",
+    "&\\text{We can also make the expansion}\\quad X=X^\\mu\\partial_\\mu = X^\\mu\\frac{\\partial}{\\partial x^\\mu}\\\\\n",
+    "&\\text{Then by the chain rule \n",
+    "}\\quad X^\\mu(x(t)) = \\frac{dx^\\mu(t)}{dt}\n",
+    "\\end{align}\n",
+    "Note that now $X^\\mu$ are smooth functions on $M$ and that additional charts maybe needed to cover the entire manifold. Note that $\\sigma_t$ is a diffeomorphism $\\sigma_t:M\\to M$ where $\\sigma_s\\circ\\sigma_t=\\sigma_{s+t}$ and in the last line $x^\\mu(t)\\equiv x^\\mu(\\sigma(t))$. These sorts of one-parameter diffemorphisms are called flows on the manifold $M.$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Since $XY$ is a second order derivative [really a second order differential operator] we don't necessarily have $XY(fg)=fXY(g)+gXY(f)$, so we don't have the product rule [Leibinizarity]. Thus it's useful to instead consider the commutator! \n",
+    "\\begin{align}\n",
+    "[X,Y]f=XYf - YXf \n",
+    "\\end{align}\n",
+    "It's also called the Lie bracket :O\n",
+    "\n",
+    "Now we invoke contravariant vector transformations to write $[X,Y]$ in a given coordinate basis\n",
+    "\\begin{align}\n",
+    "&[X,Y] = [X^\\mu\\partial_\\mu Y^\\nu\\partial_\\nu]-[Y^\\nu\\partial_\\nu X^\\mu\\partial_\\mu] \\\\\n",
+    "&\\text{Note that we can rewrite the indices}\\quad [X,Y] = [X^\\mu\\partial_\\mu Y^\\nu\\partial_\\nu]-[Y^\\mu\\partial_\\mu X^\\nu\\partial_\\nu] \\\\\n",
+    "&\\text{Linearity over addition}\\quad [X,Y] = [X^\\mu\\partial_\\mu Y^\\nu - Y^\\mu\\partial_\\mu X^\\nu]\\partial_\\nu\n",
+    "\\end{align}\n",
+    "If we differentiate a flow, we get a vector field. If we integrate a vector field, we get the streamlines of a flow, called integral curves :)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exercise 1a\n",
+    "\n",
+    "\\begin{align} \n",
+    "&\\text{If } X^\\mu=(y,-x) \\text{then we have} X = yx\\hat{\\textbf{x}}-yx\\hat{\\textbf{y}}\\\\\n",
+    "&\\text{Thus we have}\\quad X^\\mu(t) = \\frac{dx^\\mu(t)}{dt}\\\\\n",
+    "&\\text{Substituting yields}\\quad X = \\frac{\\partial y}{\\partial t}\\hat{x}-\\frac{\\partial x}{\\partial t}\\hat{y} = \\hat{x}-\\hat{y}\n",
+    "\\end{align}   "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exercise 1b\n",
+    "\n",
+    "\\begin{align} \n",
+    "&\\text{If } X^\\mu=(x-y,x+y) \\text{ then we can choose the parameterization }\\quad y(t)=x(t)=t \\\\\n",
+    "&\\text{Thus we have}\\quad X^\\mu(t) = \\frac{dx^\\mu(t)}{dt}\\\\\n",
+    "&\\text{Substituting yields}\\quad X = [\\frac{\\partial x}{\\partial t}-\\frac{\\partial y}{\\partial t}]\\hat{x}+[\\frac{\\partial x}{\\partial t}+\\frac{\\partial y}{\\partial t}]\\hat{y} = 2\\hat{y}\n",
+    "\\end{align}   "
+   ]
   },
   {
    "cell_type": "code",
